--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/fazeelk2004/realestateapp#readme",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.2",
     "nodemon": "^3.1.10"
   }
 }
