--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "lucide-react": "^0.525.0",
+    "mern-realestate": "file:..",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
